tooling/nargo_cli/tests/snapshots/execution_success/regression_9208/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_A: [Field] = &[];

fn main(a: u32) -> pub Field {
    {
        let internal___variable: u32 = a;
        match internal___variable {
            10 => G_A[1_u32 % G_A.len()],
            20 => a as Field,
            _ => {
                let _: u32 = internal___variable;
                -1_Field
            },
        }
    }
}
